Fixed Spacing

--- a/css/project-detail.css
+++ b/css/project-detail.css
@@ -45,7 +45,7 @@
   
   .project-details {
     /* text-align: center; */
-    margin-top: 20px;
+    margin-top: 100px;
   }
   
   .project-description {
@@ -130,6 +130,7 @@
   .swiper-button-next {
     position: absolute;
     top: 110%;
+    margin-top: 125px;
     transform: translateY(-50%);
     width: 40px;
     height: 40px;
